# Kedro-Experiments

./: README.md
tp-kedro-weather/: README.md  pyproject.toml
tp-kedro-weather/conf/base/: catalog.yml
tp-kedro-weather/docs/: TUTO KEDRO.md
tp-kedro-weather/docs/source/: conf.py  index.rst
tp-kedro-weather/src/tp_kedro_weather/: settings.py
tp-kedro-weather/src/tp_kedro_weather/pipelines/data_processing/: nodes.py  pipeline.py
